tests/ui/wf/wf-in-fn-type-static.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-in-fn-type-static.rs:15:12
   |
LL |     let _: Foo<T>;
   |            ^^^^^^
   |            |
   |            the parameter type `T` must be valid for the static lifetime...
   |            ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn not_static<T: 'static>() {
   |                +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-in-fn-type-static.rs:16:12
   |
LL |     let _: Bar<T>;
   |            ^^^^^^
   |            |
   |            the parameter type `T` must be valid for the static lifetime...
   |            ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn not_static<T: 'static>() {
   |                +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
